*Segundo commit** (Arreglos modificaciones y cosas que faltaban)
- Link contacto del header (Solucionado no se veía bien el fondo)
- Página Galería (La subí porque no me había quedado en el commit anterior)
- Página Menú (Agregué Cards, y moví algunas cosas para que quedara mas lindo)
- Página Historia (Moví algunas cosas para que quedara mas lindo)
- Página Contacto (Moví algunas cosas para que quedara mas lindo)
- Agregado (.gitignore)
- Agregado README.md (porque si)

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -41,8 +41,8 @@
                   <li class="nav-item">
                     <a class="nav-link" href="../pages/galeria.html">Galería</a>
                   </li>
-                  <li class="nav-item active">
-                    <a class="nav-link" href="../pages/contacto.html">Contacto</a>
+                  <li class="nav-item">
+                    <a class="nav-link active" href="../pages/contacto.html">Contacto</a>
                   </li>
                 </ul>
               </div>
@@ -54,7 +54,10 @@
   <main>
     <!-- comentarios -->
     <section class="MysteryCH-contacto">
-  
+        <div class="MysteryCH-contacto-titulo">
+          <h2>Contacto</h2>
+          <p>dejanos tus comentarios</p>
+        </div>
         <!-- dejanos tu comentario -->
         <div>
             <div class="mb-3">
@@ -65,9 +68,13 @@
                 <label for="exampleFormControlTextarea1" class="form-label">Dejanos tu comentario</label>
                 <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
             </div>
+            <div>
+              <button type="button" class="btn mysteryCH-comentario-enviar">Enviar</button>
+
+            </div>
         </div>       
         <!-- ubicación mapa -->
-        <div>
+        <div class="MysteryCH-mapa">
             <h2>Local</h2>
             <p>Podes encontrarnos en </p>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d35595148.42611383!2d-115.36512346645007!3d2.9630702150990516!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc945173b3dd7%3A0xe8a347bb55df550c!2sCoderhouse!5e0!3m2!1ses-419!2sar!4v1682467424496!5m2!1ses-419!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
