--- a/pages/historia.html
+++ b/pages/historia.html
@@ -52,7 +52,7 @@
     </header>
 
     <main>
-        <section class="MysteryCH-nosotros">
+        <section class="MysteryCH-fundador">
             <div>
                 <h2>Quienes somos</h2>
                 <p>Lorem ipsum dolor sit amet, officia excepteur ex fugiat reprehenderit enim
@@ -62,7 +62,11 @@
             <div class="container text-center">
                 <div class="row gy-5">
                     <div class="col">
-                        <img src="../assets/fundador.png" alt="fundador.png">
+                      <div class="text-center">
+                        <a href="../assets/fundador.png">
+                          <img src="../assets/fundador.png" class="rounded" alt="fundador.png">
+                        </a>
+                      </div>
                     </div>
                     <div class="col MysteryCH-texto-izquierda">
                         <h2>Fundador CEO</h2>
@@ -83,15 +87,38 @@
         </section>
         <section class="MysteryCH-nosotros">
             <div class="container text-center">
-                <div class="row row-cols-4">
+                <div class="row row-3">
                     <div class="col">
-                        <img src="../assets/barista_01.png" alt="">
+                      <div class="text-center">
+                        <div class="text-center">
+                          <a href="../assets/barista_01.png">
+                            <img src="../assets/barista_01.png" class="rounded" alt="barista_01.png">
+                          </a>
+                        </div>
+                      </div>
+                      <div>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+                      </div>
                     </div>
                     <div class="col">
-                        <img src="../assets/barista_02.png" alt="">
+                      <div class="text-center">
+                        <a href="../assets/barista_01.png">
+                          <img src="../assets/barista_02.png" class="rounded" alt="barista_01.png">
+                        </a>
+                      </div>
+                      <div>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+                      </div>
                     </div>
                     <div class="col">
-                        <img src="../assets/barista_03.png" alt="">
+                      <div class="text-center">
+                        <a href="../assets/barista_01.png">
+                          <img src="../assets/barista_03.png" class="rounded" alt="barista_01.png">
+                        </a>
+                      </div>
+                      <div>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+                      </div>
                     </div>
                 </div>
               </div>
