--- a/pages/menu.html
+++ b/pages/menu.html
@@ -60,118 +60,80 @@
                     labore culpa sint ad nisi Lorem pariatur mollit ex esse exercitation amet. Nisi
                     animcupidatat excepteur officia.</p>
                 </div>
-                <div class="row">
-                    <div class="col-sm">
-                        <a href="#">
-                            <img src="../assets/CAFE_01.png" alt="cafe_01.png">
-                        </a>
-                        <h4>Cappuccino</h4>
-                        <p>Lorem ipsum dolor sit amet, officia excepteur ex fugiat reprehenderit enim
-                            labore.</p>
-                        <button type="button" class="btn MysteryCH-boton">Comprar</button>
+              </div>
+        </section>
+        <section class="MysteryCH-menu-cafes">
+            <div class="row row-cols-1 row-cols-md-3 g-4">
+                <div class="col">
+                  <div class="card">
+                    <img src="../assets/CAFE_01.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h2 class="card-title">Cappuccino</h2>
+                      <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo temporibus, hic recusandae soluta corporis corrupti deserunt, ipsa, officia ratione alias nobis.</p>
+                      <a href="../pages/error404.html" class="btn MysteryCH-color-boton">Comprar</a>
                     </div>
-                    <div class="col-sm">
-                        <a href="#">
-                            <img src="../assets/CAFE_02.png" alt="cafe_02.png">
-                        </a>
-                        <h4>Latte</h4>
-                        <p>Lorem ipsum dolor sit amet, officia excepteur ex fugiat reprehenderit enim
-                            labore.</p>
-                        <button type="button" class="btn MysteryCH-boton">Comprar</button>
-                    </div>
-                    <div class="col-sm">
-                        <a href="#">
-                            <img src="../assets/CAFE_03.png" alt="cafe_03.png">
-                        </a>
-                        <h4>Spresso</h4>
-                        <p>Lorem ipsum dolor sit amet, officia excepteur ex fugiat reprehenderit enim
-                            labore.</p>
-                        <button type="button" class="btn MysteryCH-boton">Comprar</button>
-                    </div>
-                    <div class="col-sm">
-                        <a href="#">
-                            <img src="../assets/CAFE_04.png" alt="cafe_04.png">
-                        </a>
-                        <h4>Mocha</h4>
-                        <p>Lorem ipsum dolor sit amet, officia excepteur ex fugiat reprehenderit enim
-                        labore.</p>
-                        <button type="button" class="btn MysteryCH-boton">Comprar</button>
-                    </div>
-                    <div class="col-sm">
-                        <a href="#">
-                            <img src="../assets/CAFE_01.png" alt="cafe_01.png">
-                        </a>
-                        <h4>Cappuccino</h4>
-                        <p>Lorem ipsum dolor sit amet, officia excepteur ex fugiat reprehenderit enim
-                            labore.</p>
-                        <button type="button" class="btn MysteryCH-boton">Comprar</button>
-                    </div>
-                    <div class="col-sm">
-                        <a href="#">
-                            <img src="../assets/CAFE_02.png" alt="cafe_02.png">
-                        </a>
-                        <h4>Latte</h4>
-                        <p>Lorem ipsum dolor sit amet, officia excepteur ex fugiat reprehenderit enim
-                            labore.</p>
-                        <button type="button" class="btn MysteryCH-boton">Comprar</button>
-                    </div>
-                    <div class="col-sm">
-                        <a href="#">
-                            <img src="../assets/CAFE_03.png" alt="cafe_03.png">
-                        </a>
-                        <h4>Spresso</h4>
-                        <p>Lorem ipsum dolor sit amet, officia excepteur ex fugiat reprehenderit enim
-                            labore.</p>
-                        <button type="button" class="btn MysteryCH-boton">Comprar</button>
-                    </div>
-                    <div class="col-sm">
-                        <a href="#">
-                            <img src="../assets/CAFE_04.png" alt="cafe_04.png">
-                        </a>
-                        <h4>Mocha</h4>
-                        <p>Lorem ipsum dolor sit amet, officia excepteur ex fugiat reprehenderit enim
-                        labore.</p>
-                        <button type="button" class="btn MysteryCH-boton">Comprar</button>
-                    </div>
-                    <div class="col-sm">
-                        <a href="#">
-                            <img src="../assets/CAFE_01.png" alt="cafe_01.png">
-                        </a>
-                        <h4>Cappuccino</h4>
-                        <p>Lorem ipsum dolor sit amet, officia excepteur ex fugiat reprehenderit enim
-                            labore.</p>
-                        <button type="button" class="btn MysteryCH-boton">Comprar</button>
-                    </div>
-                    <div class="col-sm">
-                        <a href="#">
-                            <img src="../assets/CAFE_02.png" alt="cafe_02.png">
-                        </a>
-                        <h4>Latte</h4>
-                        <p>Lorem ipsum dolor sit amet, officia excepteur ex fugiat reprehenderit enim
-                            labore.</p>
-                        <button type="button" class="btn MysteryCH-boton">Comprar</button>
-                    </div>
-                    <div class="col-sm">
-                        <a href="#">
-                            <img src="../assets/CAFE_03.png" alt="cafe_03.png">
-                        </a>
-                        <h4>Spresso</h4>
-                        <p>Lorem ipsum dolor sit amet, officia excepteur ex fugiat reprehenderit enim
-                            labore.</p>
-                        <button type="button" class="btn MysteryCH-boton">Comprar</button>
-                    </div>
-                    <div class="col-sm">
-                        <a href="#">
-                            <img src="../assets/CAFE_04.png" alt="cafe_04.png">
-                        </a>
-                        <h4>Mocha</h4>
-                        <p>Lorem ipsum dolor sit amet, officia excepteur ex fugiat reprehenderit enim
-                        labore.</p>
-                        <button type="button" class="btn MysteryCH-boton">Comprar</button>
-                    </div>
-                    
-                    
+                  </div>
                 </div>
+                <div class="col">
+                  <div class="card">
+                    <img src="../assets/CAFE_02.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h2 class="card-title">Moka</h2>
+                      <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo temporibus, hic recusandae soluta corporis corrupti deserunt, ipsa, officia ratione alias nobis..</p>
+                      <a href="../pages/error404.html" class="btn MysteryCH-color-boton">Comprar</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card">
+                    <img src="../assets/CAFE_03.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h2 class="card-title">Espresso</h2>
+                      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                      <a href="../pages/error404.html" class="btn MysteryCH-color-boton">Comprar</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card">
+                    <img src="../assets/CAFE_04.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h2 class="card-title">Latte</h2>
+                      <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo temporibus, hic recusandae soluta corporis corrupti deserunt, ipsa, officia ratione alias nobis..</p>
+                      <a href="../pages/error404.html" class="btn MysteryCH-color-boton">Comprar</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                      <img src="../assets/CAFE_01.png" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h2 class="card-title">Cappuccino</h2>
+                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo temporibus, hic recusandae soluta corporis corrupti deserunt, ipsa, officia ratione alias nobis..</p>
+                        <a href="../pages/error404.html" class="btn MysteryCH-color-boton">Comprar</a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col">
+                    <div class="card">
+                      <img src="../assets/CAFE_02.png" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h2 class="card-title">Moka</h2>
+                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo temporibus, hic recusandae soluta corporis corrupti deserunt, ipsa, officia ratione alias nobis..</p>
+                        <a href="../pages/error404.html" class="btn MysteryCH-color-boton">Comprar</a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col">
+                    <div class="card">
+                      <img src="../assets/CAFE_03.png" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h2 class="card-title">Latte</h2>
+                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo temporibus, hic recusandae soluta corporis corrupti deserunt, ipsa, officia ratione alias nobis..</p>
+                        <a href="../pages/error404.html" class="btn MysteryCH-color-boton">Comprar</a>
+                      </div>
+                    </div>
+                  </div>
               </div>
         </section>
 
