--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -52,6 +52,64 @@
     </header>
 
     <main>
+      <section class="MysteryCH-galeria-titulo">
+        <div>
+          <h2>Visitá nuestros locales</h2>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. <br> Sint quaerat tenetur recusandae at impedit nulla nihil aut ab? Iure possimus quos, <br> reprehenderit dolores repudiandae illum? Sequi quisquam rem nam tenetur?</p>
+        </div>
+      </section>
+      <section>
+        <div class="text-center">
+          <a href="../assets/galeria_01.png">
+            <img src="../assets/galeria_01.png" class="rounded" alt="galeria_01.png">
+          </a>
+        </div>
+        <div class="text-center">
+          <a href="../assets/galeria_02.png">
+            <img src="../assets/galeria_02.png" class="rounded" alt="galeria_02.png">
+          </a>
+        </div>
+        <div class="text-center">
+          <a href="../assets/galeria_01.png">
+            <img src="../assets/galeria_01.png" class="rounded" alt="galeria_01.png">
+          </a>
+        </div>
+        <div class="text-center">
+          <a href="../assets/galeria_02.png">
+            <img src="../assets/galeria_02.png" class="rounded" alt="galeria_02.png">
+          </a>
+        </div>
+        <div class="text-center">
+          <a href="../assets/galeria_01.png">
+            <img src="../assets/galeria_01.png" class="rounded" alt="galeria_01.png">
+          </a>
+        </div>
+        <div class="text-center">
+          <a href="../assets/galeria_02.png">
+            <img src="../assets/galeria_02.png" class="rounded" alt="galeria_02.png">
+          </a>
+        </div>
+        <div class="text-center">
+          <a href="../assets/galeria_01.png">
+            <img src="../assets/galeria_01.png" class="rounded" alt="galeria_01.png">
+          </a>
+        </div>
+        <div class="text-center">
+          <a href="../assets/galeria_02.png">
+            <img src="../assets/galeria_02.png" class="rounded" alt="galeria_02.png">
+          </a>
+        </div>
+        <div class="text-center">
+          <a href="../assets/galeria_01.png">
+            <img src="../assets/galeria_01.png" class="rounded" alt="galeria_01.png">
+          </a>
+        </div>
+        <div class="text-center">
+          <a href="../assets/galeria_02.png">
+            <img src="../assets/galeria_02.png" class="rounded" alt="galeria_02.png">
+          </a>
+        </div>
+      </section>
 
     </main>
 
