** Tercer Commit ** solucionado problemas de scroll horizontal en la página genú.html y galería.html de utlimo momento (en la hora)

--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -58,7 +58,7 @@
           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. <br> Sint quaerat tenetur recusandae at impedit nulla nihil aut ab? Iure possimus quos, <br> reprehenderit dolores repudiandae illum? Sequi quisquam rem nam tenetur?</p>
         </div>
       </section>
-      <section>
+      <section class="MysteryCH-galeria">
         <div class="text-center">
           <a href="../assets/galeria_01.png">
             <img src="../assets/galeria_01.png" class="rounded" alt="galeria_01.png">
