--- a/pages/menu.html
+++ b/pages/menu.html
@@ -63,7 +63,7 @@
               </div>
         </section>
         <section class="MysteryCH-menu-cafes">
-            <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="row row-cols-1 row-cols-md-3 g-4 MysteryCH-tarjetas">
                 <div class="col">
                   <div class="card">
                     <img src="../assets/CAFE_01.png" class="card-img-top" alt="...">
