*Cuarto Commit** Pasado todo el styles.css al archivo estilos.scss usando sass, y pequeñas modificaciones a las páginas index.html, menu.html, galeria.html, historia.html

--- a/pages/menu.html
+++ b/pages/menu.html
@@ -10,8 +10,11 @@
     <!-- Bootstrap CSS link + js script -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <!-- SASS TRADUCIDO A CSS -->
+    <link rel="stylesheet" href="../css/estilos.css">
+    
     <!-- Mi CSS -->
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../css/style.css">
 
     <title>Mystery Coffe House</title>
 </head>
@@ -29,19 +32,19 @@
               </button>
               <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                 <ul class="navbar-nav mysteryCH-navgap">
-                  <li class="nav-item">
+                  <li class="nav-item mysteryCH-Animacion-Fadeup">
                     <a class="nav-link" aria-current="page" href="../index.html">Home</a>
                   </li>
-                  <li class="nav-item">
+                  <li class="nav-item mysteryCH-Animacion-FadeScale">
                     <a class="nav-link active" href="../pages/menu.html">Menú</a>
                   </li>
-                  <li class="nav-item">
+                  <li class="nav-item mysteryCH-Animacion-Fadeup">
                     <a class="nav-link" href="../pages/historia.html">Quienes somos</a>
                   </li>
-                  <li class="nav-item">
+                  <li class="nav-item mysteryCH-Animacion-Fadeup">
                     <a class="nav-link" href="../pages/galeria.html">Galería</a>
                   </li>
-                  <li class="nav-item">
+                  <li class="nav-item mysteryCH-Animacion-Fadeup">
                     <a class="nav-link" href="../pages/contacto.html">Contacto</a>
                   </li>
                 </ul>
@@ -55,21 +58,20 @@
         <section class="mysteryCH-cafes">
             <div class="container text-center">
                 <div class="MysteryCH-titulo">
-                    <h2>Menú</h2>
-                    <p>Lorem ipsum dolor sit amet, officia excepteur ex fugiat reprehenderit enim
-                    labore culpa sint ad nisi Lorem pariatur mollit ex esse exercitation amet. Nisi
-                    animcupidatat excepteur officia.</p>
+                    <h1>Somos especialistas en la cultura del café</h1>
+                    <p>En Mystery coffe house queremos compartir nuestro placer por esta famosa bebida que se hace en base a los granos tostados y molidos de los frutos del cafeto (la planta del café) y que tiene sus orígenes en el norte de Etiopía y que, además de brindarnos un placentero aroma y sabor, también nos aporta beneficios a nuestra salud como el mejoramiento de nuestra función cerebral y la prevención de algunas enfermedades como la diabetes.</p>
                 </div>
               </div>
         </section>
-        <section class="MysteryCH-menu-cafes">
+        <section>
             <div class="row row-cols-1 row-cols-md-3 g-4 MysteryCH-tarjetas">
                 <div class="col">
                   <div class="card">
                     <img src="../assets/CAFE_01.png" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h2 class="card-title">Cappuccino</h2>
-                      <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo temporibus, hic recusandae soluta corporis corrupti deserunt, ipsa, officia ratione alias nobis.</p>
+                      <p class="card-text">¡Oh! El famoso Cappuccino.
+                        Inspirado en el color de las capuchas de los monjes capuchinos italianos, y llevado posteriormente de Roma a Nueva York, sus preparaciones han variado tanto como la forma de pronunciarlo. Pero el color de la espuma siempre ha permanecido igual. En pocas palabras, se trata de un clásico.</p>
                       <a href="../pages/error404.html" class="btn MysteryCH-color-boton">Comprar</a>
                     </div>
                   </div>
@@ -78,8 +80,8 @@
                   <div class="card">
                     <img src="../assets/CAFE_02.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <h2 class="card-title">Moka</h2>
-                      <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo temporibus, hic recusandae soluta corporis corrupti deserunt, ipsa, officia ratione alias nobis..</p>
+                      <h2 class="card-title">Moca</h2>
+                      <p class="card-text">Un café moca es una variante del café con leche. Como este, suele llevar un tercio de expreso y dos tercios de leche vaporizada, pero se añade una parte de chocolate, normalmente en forma de jarabe de chocolate, aunque algunas máquinas usan chocolate en polvo instantáneo. Los mochas contienen chocolate negro o con leche. </p>
                       <a href="../pages/error404.html" class="btn MysteryCH-color-boton">Comprar</a>
                     </div>
                   </div>
@@ -89,7 +91,7 @@
                     <img src="../assets/CAFE_03.png" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h2 class="card-title">Espresso</h2>
-                      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                      <p class="card-text">El café expreso (también denominado café espresso, café exprés, café express o café solo) es una forma de preparación de café. Debe su término a la obtención de esta bebida a través de una cafetera expreso. Se caracteriza por su rápida preparación a una alta presión y por un sabor y textura más concentrados.</p>
                       <a href="../pages/error404.html" class="btn MysteryCH-color-boton">Comprar</a>
                     </div>
                   </div>
@@ -99,37 +101,49 @@
                     <img src="../assets/CAFE_04.png" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h2 class="card-title">Latte</h2>
-                      <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo temporibus, hic recusandae soluta corporis corrupti deserunt, ipsa, officia ratione alias nobis..</p>
+                      <p class="card-text">Un latte es uno o dos shots de espresso con leche al vapor y una fina capa de leche espumosa encima, mientras que un capuchino tiene mucha más espuma.</p>
                       <a href="../pages/error404.html" class="btn MysteryCH-color-boton">Comprar</a>
                     </div>
                   </div>
                 </div>
                 <div class="col">
                     <div class="card">
-                      <img src="../assets/CAFE_01.png" class="card-img-top" alt="...">
+                      <img src="../assets/CAFE_05.png" class="card-img-top" alt="...">
                       <div class="card-body">
-                        <h2 class="card-title">Cappuccino</h2>
-                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo temporibus, hic recusandae soluta corporis corrupti deserunt, ipsa, officia ratione alias nobis..</p>
+                        <h2 class="card-title">Macchiato de Chocolate</h2>
+                        <p class="card-text">El café gourmet se combina con el café noisette cuando dejas caer una onza de maravilloso chocolate negro en tu Espresso con leche.</p>
                         <a href="../pages/error404.html" class="btn MysteryCH-color-boton">Comprar</a>
                       </div>
                     </div>
                   </div>
                   <div class="col">
                     <div class="card">
-                      <img src="../assets/CAFE_02.png" class="card-img-top" alt="...">
+                      <img src="../assets/CAFE_06.png" class="card-img-top" alt="...">
                       <div class="card-body">
-                        <h2 class="card-title">Moka</h2>
-                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo temporibus, hic recusandae soluta corporis corrupti deserunt, ipsa, officia ratione alias nobis..</p>
+                        <h2 class="card-title">Espresso Helado</h2>
+                        <p class="card-text">¿Un toque de leche y un poco de hielo?
+                          Esta receta basada en el café Espresso se caracteriza por ingredientes sencillos, pero eso no quita que se te haga la boca agua cuando huelas el azúcar de caña y la espuma de leche.</p>
                         <a href="../pages/error404.html" class="btn MysteryCH-color-boton">Comprar</a>
                       </div>
                     </div>
                   </div>
                   <div class="col">
                     <div class="card">
-                      <img src="../assets/CAFE_03.png" class="card-img-top" alt="...">
+                      <img src="../assets/CAFE_07.png" class="card-img-top" alt="...">
                       <div class="card-body">
-                        <h2 class="card-title">Latte</h2>
-                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo temporibus, hic recusandae soluta corporis corrupti deserunt, ipsa, officia ratione alias nobis..</p>
+                        <h2 class="card-title">Irish</h2>
+                        <p class="card-text">El café irlandés a menudo significa una mezcla desordenada de alcohol, crema y café, algo parecido a un batido de whisky caliente. Pero en Mystery Coffe Hhouse, el café irlandés es exactamente lo que quieres en un día frío y lluvioso: un trago doble de espresso cortado con buen whisky y ligeramente endulzado con jarabe Demerara con infusión de vainilla, cubierto con una nube de crema suavemente batida, naranja y virutas de chocolate aromatizadas.
+                        </p>
+                        <a href="../pages/error404.html" class="btn MysteryCH-color-boton">Comprar</a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col">
+                    <div class="card">
+                      <img src="../assets/CAFE_08.png" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h2 class="card-title">Mikshake de Café</h2>
+                        <p class="card-text">Esta crema de café con 3 ingredientes, es ideal para los muy cafeteros, por su potente sabor, muy cremosa y estupenda combinación entre postres y cafés.</p>
                         <a href="../pages/error404.html" class="btn MysteryCH-color-boton">Comprar</a>
                       </div>
                     </div>
