--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
     <!-- Bootstrap CSS link + js script -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <!-- animaciones de "animate.style" Animation Library CDN -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <!-- SASS TRADUCIDO A CSS -->
+    <link rel="stylesheet" href="./css/estilos.css">
     <!-- Mi CSS -->
-    <link rel="stylesheet" href="style.css">
+    <!-- <link rel="stylesheet" href="./css/style.css"> -->
 
     <title>Mystery Coffe House</title>
 </head>
@@ -29,19 +33,19 @@
               </button>
               <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                 <ul class="navbar-nav mysteryCH-navgap">
-                  <li class="nav-item">
+                  <li class="nav-item mysteryCH-Animacion-FadeScale">
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                   </li>
-                  <li class="nav-item">
+                  <li class="nav-item mysteryCH-Animacion-Fadeup">
                     <a class="nav-link" href="./pages/menu.html">Menú</a>
                   </li>
-                  <li class="nav-item">
+                  <li class="nav-item mysteryCH-Animacion-Fadeup">
                     <a class="nav-link" href="./pages/historia.html">Quienes somos</a>
                   </li>
-                  <li class="nav-item">
+                  <li class="nav-item mysteryCH-Animacion-Fadeup">
                     <a class="nav-link" href="./pages/galeria.html">Galería</a>
                   </li>
-                  <li class="nav-item">
+                  <li class="nav-item mysteryCH-Animacion-Fadeup">
                     <a class="nav-link" href="./pages/contacto.html">Contacto</a>
                   </li>
                 </ul>
@@ -56,59 +60,67 @@
         <section class="fotoPortada">
             <div>
               <img src="./assets/banner.png" alt="portada.png">
-
             </div>
         </section>
         
         <!-- cafe para todos -->
         <section>
           <div class="cafe-para-todos container">
-            <h2>Existe un café para todas las estaciones</h2>
+            <h1>Existe un café para todas las estaciones</h1>
+            <p>No importa la estación, de donde vengas, adonde vayas, quien seas.<br>
+              Tenemos el café para vos</p>
             <ul>
-              <li>
+              <li class="mysteryCH-Animacion-hoverEscala">
                 <a href="./pages/error404.html">
                   <img src="./assets/tipo_01.png" alt="Cafe_primavera.png">
                 </a>
-                <p>Para la primavera</p>
+                <h4>Para la primavera</h4>
               </li>
-              <li>
+              <li class="mysteryCH-Animacion-hoverEscala">
                 <a href="./pages/error404.html">
                   <img src="./assets/tipo_02.png" alt="Cafe_verano.png">
                 </a>
-                <p>Para el verano</p>
+                <h4>Para el verano</h4>
               </li>  
-              <li>
+              <li class="mysteryCH-Animacion-hoverEscala">
                 <a href="./pages/error404.html">
                   <img src="./assets/tipo_03.png" alt="Cafe_invierno.png">
                 </a>
-                <p>Para el invierno</p>
+                <h4>Para el invierno</h4>
               </li>    
             </ul>  
-            <p>No importa la estación, de donde vengas, adonde vayas, quien seas.<br>
-              Tenemos el café para vos</p>
           </div>
 
         </section>
 
+        <section class="fotoPortada">
+          <div>
+            <img src="./assets/granos_cayendo_02.png" alt="foto_final.png">
+
+          </div>
+        </section>
+
     </main>
 
-    <footer class="mysteryCH-footer">
-      <div>
+    <footer>
+      <div class="mysteryCH-footer">
+        <div class="logoMysteryCH_footer">
         <a href="#">
           <img src="./assets/MysteryCH_logotipo_oscuro.png" alt="Logotipo oscuro Mystery.png">
         </a>
-        <ul>
-          <li>
-            <a href="https://www.facebook.com/">
-              <img src="./assets/logo-facebook.png" alt="Facebook Logo">
-            </a>
-          </li>
-          <li>
-            <a href="https://www.instagram.com/">
-              <img src="./assets/logo-instagram.png" alt="Instagram Logo">
-            </a>
-          </li>
-        </ul>
+        </div>
+          <ul>
+            <li>
+              <a href="https://www.facebook.com/">
+                <img src="./assets/logo-facebook.png" alt="Facebook Logo">
+              </a>
+            </li>
+            <li>
+              <a href="https://www.instagram.com/">
+                <img src="./assets/logo-instagram.png" alt="Instagram Logo">
+              </a>
+            </li>
+          </ul>
       </div>
     </footer>
     
