--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -10,8 +10,10 @@
     <!-- Bootstrap CSS link + js script -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <!-- SASS TRADUCIDO A CSS -->
+    <link rel="stylesheet" href="../css/estilos.css">
     <!-- Mi CSS -->
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../css/style.css">
 
     <title>Mystery Coffe House</title>
 </head>
@@ -29,19 +31,19 @@
               </button>
               <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                 <ul class="navbar-nav mysteryCH-navgap">
-                  <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="../index.html">Home</a>
+                  <li class="nav-item mysteryCH-Animacion-Fadeup">
+                    <a class="nav-link " aria-current="page" href="../index.html">Home</a>
                   </li>
-                  <li class="nav-item">
+                  <li class="nav-item mysteryCH-Animacion-Fadeup">
                     <a class="nav-link" href="../pages/menu.html">Menú</a>
                   </li>
-                  <li class="nav-item">
+                  <li class="nav-item mysteryCH-Animacion-Fadeup">
                     <a class="nav-link" href="../pages/historia.html">Quienes somos</a>
                   </li>
-                  <li class="nav-item">
+                  <li class="nav-item mysteryCH-Animacion-Fadeup">
                     <a class="nav-link" href="../pages/galeria.html">Galería</a>
                   </li>
-                  <li class="nav-item">
+                  <li class="nav-item mysteryCH-Animacion-FadeScale">
                     <a class="nav-link active" href="../pages/contacto.html">Contacto</a>
                   </li>
                 </ul>
