--- a/pages/historia.html
+++ b/pages/historia.html
@@ -10,8 +10,10 @@
     <!-- Bootstrap CSS link + js script -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <!-- SASS TRADUCIDO A CSS -->
+    <link rel="stylesheet" href="../css/estilos.css">
     <!-- Mi CSS -->
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../css/style.css">
 
     <title>Mystery Coffe House</title>
 </head>
@@ -29,19 +31,19 @@
               </button>
               <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                 <ul class="navbar-nav mysteryCH-navgap">
-                  <li class="nav-item">
+                  <li class="nav-item mysteryCH-Animacion-Fadeup">
                     <a class="nav-link" aria-current="page" href="../index.html">Home</a>
                   </li>
-                  <li class="nav-item">
+                  <li class="nav-item mysteryCH-Animacion-Fadeup">
                     <a class="nav-link" href="../pages/menu.html">Menú</a>
                   </li>
-                  <li class="nav-item">
+                  <li class="nav-item mysteryCH-Animacion-FadeScale">
                     <a class="nav-link active" href="../pages/historia.html">Quienes somos</a>
                   </li>
-                  <li class="nav-item">
+                  <li class="nav-item mysteryCH-Animacion-Fadeup">
                     <a class="nav-link" href="../pages/galeria.html">Galería</a>
                   </li>
-                  <li class="nav-item">
+                  <li class="nav-item mysteryCH-Animacion-Fadeup">
                     <a class="nav-link" href="../pages/contacto.html">Contacto</a>
                   </li>
                 </ul>
@@ -54,33 +56,28 @@
     <main>
         <section class="MysteryCH-fundador">
             <div>
-                <h2>Quienes somos</h2>
-                <p>Lorem ipsum dolor sit amet, officia excepteur ex fugiat reprehenderit enim
-                labore culpa sint ad nisi Lorem pariatur mollit ex esse exercitation amet. <br> Nisi
-                animcupidatat excepteur officia.</p>
+                <h1>Quienes somos</h1>
+                <p>Nuestro equipo está formado por amantes del café que no solo se esfuerzan por proporcionar la mejor calidad, sino que también buscan difundir el amor por esta bebida a través de cada grano molido. Nos enorgullecemos de nuestro compromiso con la sostenibilidad y el comercio ético, colaborando estrechamente con comunidades cafetaleras para asegurarnos de que cada paso del proceso sea equitativo y respetuoso con el medio ambiente.</p>
             </div>
-            <div class="container text-center">
-                <div class="row gy-5">
-                    <div class="col">
-                      <div class="text-center">
-                        <a href="../assets/fundador.png">
-                          <img src="../assets/fundador.png" class="rounded" alt="fundador.png">
-                        </a>
+            <div class="MysteryCH-integrantes">
+              <div class="container text-center">
+                  <div class="row gy-5">
+                      <div class="col">
+                        <div class="text-center">
+                          <a href="../assets/fundador.png">
+                            <img src="../assets/fundador.png" class="rounded" alt="fundador.png">
+                          </a>
+                        </div>
                       </div>
-                    </div>
-                    <div class="col MysteryCH-texto-izquierda">
-                        <h2>Fundador CEO</h2>
-                        <p>Lorem ipsum dolor sit amet, officia excepteur ex fugiat reprehenderit enim
-                        labore culpa sint ad nisi Lorem pariatur mollit ex esse exercitation amet. Nisi
-                        animcupidatat excepteur officia. Reprehenderit nostrud nostrud ipsum Lorem est
-                        aliquip amet voluptate voluptate dolor minim nulla est proident. Nostrud officia
-                        pariatur ut officia. Sit irure elit esse ea nulla sunt ex occaecat reprehenderit
-                        commodo officia dolor Lorem duis laboris cupidatat officia voluptate. Culpa
-                        proident adipisicing id nulla nisi laboris ex in Lorem sunt duis officia
-                        eiusmod. Aliqua reprehenderit commodo ex non excepteur duis sunt velit enim.
-                        Voluptate laboris sint cupidatat ullamco ut ea consectetur et est culpa et
-                        culpa duis.</p>
-                    </div>
+                      <div class="col MysteryCH-texto-izquierda">
+                          <h2>Fundador CEO</h2>
+                          <p>El fundador y CEO de <b>Mystery Coffe House</b> es un apasionado del mundo del café. Su amor por esta bebida excepcional se arraiga en experiencias que se remontan a su infancia, donde las historias de los cafetales y los aromas seductores capturaron su imaginación desde temprana edad.
+                          <br><br>
+                          Después de años de exploración y aprendizaje sobre la cultura del café, decidió materializar su visión: crear un espacio donde los amantes del café pudieran reunirse para disfrutar de las más exquisitas variedades de granos, en un ambiente acogedor y enriquecedor.
+                          <br><br>
+                          Guiado por su pasión por el café de calidad, el fundador se ha dedicado a establecer relaciones directas con productores de todo el mundo, priorizando la calidad, la sostenibilidad y el apoyo a las comunidades cafetaleras. Su compromiso con la excelencia y la ética ha sido el motor que impulsa a <b>Mystery Coffe House</b> a ofrecer una experiencia única a sus clientes, donde cada taza cuenta una historia de dedicación y amor por el café..</p>
+                      </div>
+                    </div>  
                 </div>
               </div>
 
@@ -97,7 +94,7 @@
                         </div>
                       </div>
                       <div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+                        <h4>Senior Coffe Master</h4>
                       </div>
                     </div>
                     <div class="col">
@@ -107,7 +104,7 @@
                         </a>
                       </div>
                       <div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+                        <h4>Senior Barista</h4>
                       </div>
                     </div>
                     <div class="col">
@@ -117,7 +114,7 @@
                         </a>
                       </div>
                       <div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+                        <h4>Coffe Manager</h4>
                       </div>
                     </div>
                 </div>
