--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -12,9 +12,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <!-- SASS TRADUCIDO A CSS -->
     <link rel="stylesheet" href="../css/estilos.css">
-    <!-- Mi CSS -->
-    <link rel="stylesheet" href="../css/style.css">
-
     <title>Mystery Coffe House</title>
 </head>
 
@@ -86,11 +83,13 @@
      
   </main>
 
-    <footer class="mysteryCH-footer">
-      <div>
-        <a href="#">
-          <img src="../assets/MysteryCH_logotipo_oscuro.png" alt="Logotipo oscuro Mystery.png">
-        </a>
+  <footer>
+    <div class="mysteryCH-footer">
+      <div class="logoMysteryCH_footer">
+      <a href="#">
+        <img src="../assets/MysteryCH_logotipo_oscuro.png" alt="Logotipo oscuro Mystery.png">
+      </a>
+      </div>
         <ul>
           <li>
             <a href="https://www.facebook.com/">
@@ -103,8 +102,8 @@
             </a>
           </li>
         </ul>
-      </div>
-    </footer>
+    </div>
+  </footer>
     
 </body>
 </html>
