--- a/pages/menu.html
+++ b/pages/menu.html
@@ -12,10 +12,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <!-- SASS TRADUCIDO A CSS -->
     <link rel="stylesheet" href="../css/estilos.css">
-    
-    <!-- Mi CSS -->
-    <link rel="stylesheet" href="../css/style.css">
-
     <title>Mystery Coffe House</title>
 </head>
 
@@ -153,23 +149,25 @@
 
     </main>
 
-    <footer class="mysteryCH-footer">
-      <div>
+    <footer>
+      <div class="mysteryCH-footer">
+        <div class="logoMysteryCH_footer">
         <a href="#">
           <img src="../assets/MysteryCH_logotipo_oscuro.png" alt="Logotipo oscuro Mystery.png">
         </a>
-        <ul>
-          <li>
-            <a href="https://www.facebook.com/">
-              <img src="../assets/logo-facebook.png" alt="Facebook Logo">
-            </a>
-          </li>
-          <li>
-            <a href="https://www.instagram.com/">
-              <img src="../assets/logo-instagram.png" alt="Instagram Logo">
-            </a>
-          </li>
-        </ul>
+        </div>
+          <ul>
+            <li>
+              <a href="https://www.facebook.com/">
+                <img src="../assets/logo-facebook.png" alt="Facebook Logo">
+              </a>
+            </li>
+            <li>
+              <a href="https://www.instagram.com/">
+                <img src="../assets/logo-instagram.png" alt="Instagram Logo">
+              </a>
+            </li>
+          </ul>
       </div>
     </footer>
     
