** Sexto commit ** - Agregado el SEO y descripción a todas las páginas - Reducido el tamaño de las imágenes para que qude mas liviano - Completados toso los alt de las imágenes - Revisado los h1,h2,h3... para que cumplan con los estándares - Modificadas algunas clases para que cumplan con los estándares - Modificaciones en el sass y por lo tanto css para que quede más ordenado

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- descripción del sitio -->
+    <meta name="description" content="¡Descubre el arte del café en Mystery Coffe House y vive una experiencia multisensorial!">
+    <!-- palabras clave SEO -->
+    <meta name="keywords" content="Mystery Coffee House, coffe house, coffe shop, café, cafetera, granos de café, energía, bebida caliente, Merienda, blend, cold brew">
     <!-- fuentes -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,7 +18,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <!-- SASS TRADUCIDO A CSS -->
     <link rel="stylesheet" href="./css/estilos.css">
-    <title>Mystery Coffe House</title>
+    <title>Mystery Coffee House</title>
 </head>
 
 <body>
@@ -71,19 +75,19 @@
                 <a href="./pages/error404.html">
                   <img src="./assets/tipo_01.png" alt="Cafe_primavera.png">
                 </a>
-                <h4>Para la primavera</h4>
+                <h2>Para la primavera</h2>
               </li>
               <li class="mysteryCH-Animacion-hoverEscala">
                 <a href="./pages/error404.html">
                   <img src="./assets/tipo_02.png" alt="Cafe_verano.png">
                 </a>
-                <h4>Para el verano</h4>
+                <h2>Para el verano</h2>
               </li>  
               <li class="mysteryCH-Animacion-hoverEscala">
                 <a href="./pages/error404.html">
                   <img src="./assets/tipo_03.png" alt="Cafe_invierno.png">
                 </a>
-                <h4>Para el invierno</h4>
+                <h2>Para el invierno</h2>
               </li>    
             </ul>  
           </div>
