--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- descripción del sitio -->
+    <meta name="description" content="Dejanos tus comentarios o preguntas sobre nuestros cafés o nuestros locales Mystery Coffee House">
+    <!-- palabras clave SEO -->
+    <meta name="keywords" content="Mystery Coffee House, coffe house, coffe shop, café, cafetera, granos de café, energía, bebida caliente, Merienda, blend, cold brew">
     <!-- fuentes -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,7 +16,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <!-- SASS TRADUCIDO A CSS -->
     <link rel="stylesheet" href="../css/estilos.css">
-    <title>Mystery Coffe House</title>
+    <title>Contacto Mystery Coffee House</title>
 </head>
 
 <body>
@@ -52,9 +56,9 @@
 
   <main>
     <!-- comentarios -->
-    <section class="MysteryCH-contacto">
-        <div class="MysteryCH-contacto-titulo">
-          <h2>Contacto</h2>
+    <section class="mysteryCH-contacto">
+        <div class="mysteryCH-contacto-titulo">
+          <h1>Contacto</h1>
           <p>dejanos tus comentarios</p>
         </div>
         <!-- dejanos tu comentario -->
@@ -73,7 +77,7 @@
             </div>
         </div>       
         <!-- ubicación mapa -->
-        <div class="MysteryCH-mapa">
+        <div class="mysteryCH-mapa">
             <h2>Local</h2>
             <p>Podes encontrarnos en </p>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d35595148.42611383!2d-115.36512346645007!3d2.9630702150990516!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc945173b3dd7%3A0xe8a347bb55df550c!2sCoderhouse!5e0!3m2!1ses-419!2sar!4v1682467424496!5m2!1ses-419!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
