--- a/pages/error404.html
+++ b/pages/error404.html
@@ -1,26 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <!-- fuentes -->
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
-        <!-- Bootstrap CSS link + js script -->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-        <!-- SASS TRADUCIDO A CSS -->
-        <link rel="stylesheet" href="../css/estilos.css">
-        <title>Mystery Coffe House</title>
-    </head>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- descripción del sitio -->
+  <meta name="description" content="Error 404 no encontramos tu página">
+  <!-- no agrego SEO porque es una página de error -->
+  <!-- fuentes -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+  <!-- Bootstrap CSS link + js script -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+  <!-- SASS TRADUCIDO A CSS -->
+  <link rel="stylesheet" href="../css/estilos.css">
+  <title>Error 404</title>
+</head>
 <body>
     <header>
         <!-- navbar  | Mi CSS | mysteryCH-NavColor = Fondo del navbar  -->
         <nav class="navbar navbar-expand-lg sticky-top mysteryCH-NavColor mysteryCH-destacado">
             <div class="container-fluid nav-pills">
               <a class="navbar-brand" href="../index.html">
-                <img src="../assets/MysteryCH_logotipo.png" alt="" width="100" class="d-inline-block align-text-top">
+                <img src="../assets/MysteryCH_logotipo.png" alt="Logotipo Mystery.png" width="100" class="d-inline-block align-text-top">
               </a>
               <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
             
