--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- descripción del sitio -->
+    <meta name="description" content="Galería de fotos de nuestros locales misteriosos">
+    <!-- palabras clave SEO -->
+    <meta name="keywords" content="Mystery Coffee House, coffe house, coffe shop, café, cafetera, granos de café, energía, bebida caliente, Merienda, blend, cold brew">
     <!-- fuentes -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,7 +16,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <!-- SASS TRADUCIDO A CSS -->
     <link rel="stylesheet" href="../css/estilos.css">
-    <title>Mystery Coffe House</title>
+    <title>Galería de fotos de nuestros locales misteriosos</title>
 </head>
 
 <body>
@@ -53,65 +57,65 @@
     <main>
       <section class="mysteryCH-galeria-titulo">
         <div>
-          <h2>¡Descubre el arte del café en <b>Mystery Coffe House</b> <br> y vive una experiencia multisensorial!</h2>
-          <h3>Te invitamos a adentrarte en el fascinante mundo del café en nuestros locales. Desde el momento en que cruzas nuestras puertas, te sumergirás en un viaje sensorial que despertará tus sentidos.
+          <h1>¡Descubre el arte del café en <b>Mystery Coffe House</b> <br> y vive una experiencia multisensorial!</h1>
+          <h2>Te invitamos a adentrarte en el fascinante mundo del café en nuestros locales. Desde el momento en que cruzas nuestras puertas, te sumergirás en un viaje sensorial que despertará tus sentidos.
           <br><br>
           En <b>Mystery Coffe House</b>, cada taza es una obra maestra en proceso. Ven y observa cómo seleccionamos con esmero los granos más exquisitos y los convertimos en esa bebida que tanto amas. Nuestros expertos baristas, apasionados y dedicados, te mostrarán el arte detrás de cada preparación, desde el tueste hasta el vertido, revelando secretos que convierten un simple café en una experiencia sensorial única.
           <br><br>
           El aroma embriagador, los sonidos reconfortantes de los granos moliéndose, la vista del café tomando forma en la taza, el tacto cálido del recipiente entre tus manos y, por supuesto, el sabor inigualable que deleitará tu paladar: en <b>Mystery Coffe House</b>, queremos que cada uno de tus sentidos se sumerja en el placer del café de calidad.
           <br><br>
-          Visítanos y sé parte de este proceso. Conéctate con el corazón mismo de nuestra pasión por el café y experimenta la magia que reside en cada taza. ¡Te esperamos para que descubras cómo convertimos el café en una experiencia que despierta todos tus sentidos!</h3>
+          Visítanos y sé parte de este proceso. Conéctate con el corazón mismo de nuestra pasión por el café y experimenta la magia que reside en cada taza. ¡Te esperamos para que descubras cómo convertimos el café en una experiencia que despierta todos tus sentidos!</h2>
         </div>
       </section>
       <section class="mysteryCH-galeria">
         <div class="text-center grid-img-1">
           <a href="../assets/galeria_01.png">
-            <img src="../assets/galeria_01.png" class="rounded" alt="galeria_01.png">
+            <img src="../assets/galeria_01.png" class="rounded" alt="Foto galeria_01.png">
           </a>
         </div>
         <div class="text-center grid-img-2">
           <a href="../assets/galeria_02.png">
-            <img src="../assets/galeria_02.png" class="rounded" alt="galeria_02.png">
+            <img src="../assets/galeria_02.png" class="rounded" alt="Foto galeria_02.png">
           </a>
         </div>
         <div class="text-center grid-img-3">
           <a href="../assets/galeria_03.png">
-            <img src="../assets/galeria_03.png" class="rounded" alt="galeria_03.png">
+            <img src="../assets/galeria_03.png" class="rounded" alt="Foto galeria_03.png">
           </a>
         </div>
         <div class="text-center grid-img-4">
           <a href="../assets/galeria_04.png">
-            <img src="../assets/galeria_04.png" class="rounded" alt="galeria_04.png">
+            <img src="../assets/galeria_04.png" class="rounded" alt="Foto galeria_04.png">
           </a>
         </div>
         <div class="text-center grid-img-5">
           <a href="../assets/galeria_05.png">
-            <img src="../assets/galeria_05.png" class="rounded" alt="galeria_05.png">
+            <img src="../assets/galeria_05.png" class="rounded" alt="Foto galeria_05.png">
           </a>
         </div>
         <div class="text-center grid-img-6">
           <a href="../assets/galeria_02.png">
-            <img src="../assets/galeria_02.png" class="rounded" alt="galeria_02.png">
+            <img src="../assets/galeria_02.png" class="rounded" alt="Foto galeria_02.png">
           </a>
         </div>
         <div class="text-center grid-img-7">
           <a href="../assets/galeria_06.png">
-            <img src="../assets/galeria_06.png" class="rounded" alt="galeria_06.png">
+            <img src="../assets/galeria_06.png" class="rounded" alt="Foto galeria_06.png">
           </a>
         </div>
         <div class="text-center grid-img-8">
           <a href="../assets/galeria_07.png">
-            <img src="../assets/galeria_07.png" class="rounded" alt="galeria_07.png">
+            <img src="../assets/galeria_07.png" class="rounded" alt="Foto galeria_07.png">
           </a>
         </div>
         <div class="text-center grid-img-9">
           <a href="../assets/galeria_08.png">
-            <img src="../assets/galeria_08.png" class="rounded" alt="galeria_08.png">
+            <img src="../assets/galeria_08.png" class="rounded" alt="Foto galeria_08.png">
           </a>
         </div>
         <div class="text-centergrid-img-10">
           <a href="../assets/galeria_09.png">
-            <img src="../assets/galeria_09.png" class="rounded" alt="galeria_09.png">
+            <img src="../assets/galeria_09.png" class="rounded" alt="Foto galeria_09.png">
           </a>
         </div>
       </section>
