--- a/pages/historia.html
+++ b/pages/historia.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- descripción del sitio -->
+    <meta name="description" content="Quienes somos en Mystery Coffee House, nuestro equipo, baristas y nuestra historia">
+    <!-- palabras clave SEO -->
+    <meta name="keywords" content="Mystery Coffee House, coffe house, coffe shop, café, cafetera, granos de café, energía, bebida caliente, Merienda, blend, cold brew">
     <!-- fuentes -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,7 +16,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <!-- SASS TRADUCIDO A CSS -->
     <link rel="stylesheet" href="../css/estilos.css">
-    <title>Mystery Coffe House</title>
+    <title>Quienes somos, nuestra historia y nuestro equipo</title>
 </head>
 
 <body>
@@ -51,12 +55,12 @@
     </header>
 
     <main>
-        <section class="MysteryCH-fundador">
+        <section class="mysteryCH-fundador">
             <div>
                 <h1>Quienes somos</h1>
                 <p>Nuestro equipo está formado por amantes del café que no solo se esfuerzan por proporcionar la mejor calidad, sino que también buscan difundir el amor por esta bebida a través de cada grano molido. Nos enorgullecemos de nuestro compromiso con la sostenibilidad y el comercio ético, colaborando estrechamente con comunidades cafetaleras para asegurarnos de que cada paso del proceso sea equitativo y respetuoso con el medio ambiente.</p>
             </div>
-            <div class="MysteryCH-integrantes">
+            <div class="mysteryCH-integrantes">
               <div class="container text-center">
                   <div class="row gy-5">
                       <div class="col">
@@ -66,7 +70,7 @@
                           </a>
                         </div>
                       </div>
-                      <div class="col MysteryCH-texto-izquierda">
+                      <div class="col mysteryCH-texto-izquierda">
                           <h2>Fundador CEO</h2>
                           <p>El fundador y CEO de <b>Mystery Coffe House</b> es un apasionado del mundo del café. Su amor por esta bebida excepcional se arraiga en experiencias que se remontan a su infancia, donde las historias de los cafetales y los aromas seductores capturaron su imaginación desde temprana edad.
                           <br><br>
@@ -79,7 +83,7 @@
               </div>
 
         </section>
-        <section class="MysteryCH-nosotros">
+        <section class="mysteryCH-nosotros">
             <div class="container text-center">
                 <div class="row row-3">
                     <div class="col">
@@ -91,27 +95,27 @@
                         </div>
                       </div>
                       <div>
-                        <h4>Senior Coffe Master</h4>
+                        <h3>Senior Coffe Master</h3>
                       </div>
                     </div>
                     <div class="col">
                       <div class="text-center">
                         <a href="../assets/barista_01.png">
-                          <img src="../assets/barista_02.png" class="rounded" alt="barista_01.png">
+                          <img src="../assets/barista_02.png" class="rounded" alt="barista_02.png">
                         </a>
                       </div>
                       <div>
-                        <h4>Senior Barista</h4>
+                        <h3>Senior Barista</h3>
                       </div>
                     </div>
                     <div class="col">
                       <div class="text-center">
                         <a href="../assets/barista_01.png">
-                          <img src="../assets/barista_03.png" class="rounded" alt="barista_01.png">
+                          <img src="../assets/barista_03.png" class="rounded" alt="barista_03.png">
                         </a>
                       </div>
                       <div>
-                        <h4>Coffe Manager</h4>
+                        <h3>Coffe Manager</h3>
                       </div>
                     </div>
                 </div>
