** Septimo Commit ** - Agregado meta kewords personalizadas a todos los html

--- a/pages/error404.html
+++ b/pages/error404.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- descripción del sitio -->
-  <meta name="description" content="Error 404 no encontramos tu página">
+  <meta name="description" content="Error 404 no encontramos tu página dentro de mysterycoffehouse">
   <!-- no agrego SEO porque es una página de error -->
   <!-- fuentes -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
