--- a/pages/historia.html
+++ b/pages/historia.html
@@ -6,7 +6,7 @@
     <!-- descripción del sitio -->
     <meta name="description" content="Quienes somos en Mystery Coffee House, nuestro equipo, baristas y nuestra historia">
     <!-- palabras clave SEO -->
-    <meta name="keywords" content="Mystery Coffee House, coffe house, coffe shop, café, cafetera, granos de café, energía, bebida caliente, Merienda, blend, cold brew">
+    <meta name="keywords" content="Mystery Coffee House, coffe house, coffe shop, café, cafetera, granos de café, energía, bebida caliente, Merienda, blend, cold brew, historia, quienes somos">
     <!-- fuentes -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
