--- a/pages/menu.html
+++ b/pages/menu.html
@@ -6,7 +6,7 @@
     <!-- descripción del sitio -->
     <meta name="description" content="Nuestro Mystery menú: café, blends con un toque de misterio">
     <!-- palabras clave SEO -->
-    <meta name="keywords" content="Mystery Coffee House, coffe house, coffe shop, café, cafetera, granos de café, energía, bebida caliente, Merienda, blend, cold brew">
+    <meta name="keywords" content="Mystery Coffee House, coffe house, coffe shop, café, cafetera, granos de café, energía, bebida caliente, Merienda, blend, cold brew, menú, menú de café, nuestros cafés">
     <!-- fuentes -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
