--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -6,7 +6,7 @@
     <!-- descripción del sitio -->
     <meta name="description" content="Dejanos tus comentarios o preguntas sobre nuestros cafés o nuestros locales Mystery Coffee House">
     <!-- palabras clave SEO -->
-    <meta name="keywords" content="Mystery Coffee House, coffe house, coffe shop, café, cafetera, granos de café, energía, bebida caliente, Merienda, blend, cold brew">
+    <meta name="keywords" content="Mystery Coffee House, coffe house, coffe shop, café, cafetera, granos de café, energía, bebida caliente, Merienda, blend, cold brew, locales, contacto, comentarios">
     <!-- fuentes -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
