--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -6,7 +6,7 @@
     <!-- descripción del sitio -->
     <meta name="description" content="Galería de fotos de nuestros locales misteriosos">
     <!-- palabras clave SEO -->
-    <meta name="keywords" content="Mystery Coffee House, coffe house, coffe shop, café, cafetera, granos de café, energía, bebida caliente, Merienda, blend, cold brew">
+    <meta name="keywords" content="Mystery Coffee House, coffe house, coffe shop, café, cafetera, granos de café, energía, bebida caliente, Merienda, blend, cold brew, locales, nuestros locales, Fotos de café">
     <!-- fuentes -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
